# super-sercret-memory-transformer

./: .gitignore  100kmath.txt  A First Course in Linear Algebra Robert A. Beezer.txt  README.md  dataloader.py  neural_memory_transformer_model.py  pyproject.toml  requirements.txt  setup.sh  standard_transformer_model.py  train_model.py
smalldata/: NEW EDITION HIGH SCHOOL English Grammar & Composition BY WREN & MARTIN.txt  U.S. History SENIOR CONTRIBUTING AUTHORS P. SCOTT CORBETT, VENTURA COLLEGE.txt
